tests/errors/AssignToUndeclaredScalar.imp
VAR
BEGIN
  a := 0;
END
